# py-httproxy

./: .gitignore  README.md  pyproject.toml  test_proxy.py
httproxy/: __init__.py  __main__.py  cli.py  server.py
tests/: test_server.py
